<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/happened_today"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_world_black_24dp"
            android:title="@string/happening"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/saved_articles"/>
    </group>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/licences"/>
        </menu>
    </item>

</menu>
