<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/article_image"
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/titleWithoutImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoImageView"
            android:background="#ffffffff"
            android:gravity="center"
            android:padding="4dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:text="The new CEO from Apple declare that he quites"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleWithoutImage"
            android:layout_marginBottom="2dp"
            android:background="#ffffffff"
            android:gravity="center"
            android:foregroundGravity="center"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="italic"
            android:typeface="serif"
            tools:text="Knowing the new directory from the ground is laying back the jeffersion street the longest shortly while is being going on stage further back is declaring having solutions, but news fjfz"/>


        <android.support.design.widget.FloatingActionButton
            android:contentDescription="@string/save_button"
            android:id="@+id/saveFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="16dp"
            app:backgroundTint="#E65100"
            app:elevation="6dp"
            app:fabSize="mini"
            app:rippleColor="#1565C0"
            app:srcCompat="@drawable/ic_save_black_24dp"
            android:layout_above="@+id/titleWithoutImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="true"/>

        <android.support.design.widget.FloatingActionButton
            android:contentDescription="@string/comment_button"
            android:id="@+id/commentFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/saveFloatingActionButton"
            android:layout_alignEnd="@+id/saveFloatingActionButton"
            android:layout_alignRight="@+id/saveFloatingActionButton"
            android:layout_marginBottom="50dp"
            app:backgroundTint="#E65100"
            app:rippleColor="#1565C0"
            app:elevation="6dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_comment_black_24dp"
            android:focusable="true"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
